--- a/gallery/templates/image.html
+++ b/gallery/templates/image.html
@@ -19,11 +19,11 @@
 				{% csrf_token %}
 				
 				<div class="nick col-xs-12">
-					{{ form.user|attr:"placeholder:Comment with nickname"|attr:"class:form-control"}}
+					{{ form.user|attr:"placeholder:Comment with nickname"|attr:"class:form-control"|attr:"required"}}
 				</div>
 
 				<div class="comment col-xs-12">
-					{{ form.text|attr:"placeholder:Write your comment here"|attr:"class:comment-textarea form-control"}}
+					{{ form.text|attr:"placeholder:Write your comment here"|attr:"class:comment-textarea form-control"|attr:"required"}}
 				</div>
 
 				<input class="btn btn-success btn-lg btn-block" type="submit" value="Submit" />
@@ -49,46 +49,5 @@
 
 </div>
 	
-
-	<style type="text/css">
-	.show-image .image-text {
-		text-align: center;
-		margin-top: 0px;
-		word-break: break-word;
-	}
-
-	.show-image .no-comments-text {
-		text-align: center;
-	}
-
-	.show-image .comment-panel {
-		margin-bottom: 0px;
-		margin-top: 0px;
-	}
-	.show-image .comment-textarea {
-    	height: 100px;
-	}
-
-	.show-image .comment {
-		padding-left: 0px;
-		padding-right: 0px;
-		margin-bottom: 10px;
-	}
-
-	.show-image .nick {
-		padding-left: 0px;
-		padding-right: 0px;
-		margin-bottom: 10px;
-	}
-
-	.show-image .comment-panel .panel-body {
-		padding-bottom: 0px;
-	}
-
-	</style>
-
-	<script type="text/javascript">
-
-	</script>
 {% endblock %}
 
